Test sonar exclusion